renamed checks to is unique #major
