# src/main/kotlin/de/hennihaus/routes/resources/TeamResources.kt
@@ -7,9 +7,9 @@ object TeamPaths {
     const val TEAMS_PATH = "/teams"
     const val ID_PATH = "/{id}"
 
-    const val USERNAME_EXISTS_PATH = "/check/username/{username}"
-    const val PASSWORD_EXISTS_PATH = "/check/password/{password}"
-    const val JMS_QUEUE_EXISTS_PATH = "/check/jmsQueue/{jmsQueue}"
+    const val USERNAME_UNIQUE_PATH = "/unique/username/{username}"
+    const val PASSWORD_UNIQUE_PATH = "/unique/password/{password}"
+    const val JMS_QUEUE_UNIQUE_PATH = "/unique/jmsQueue/{jmsQueue}"
     const val RESET_ALL_STATISTICS_PATH = "/statistics"
 }
 
@@ -22,16 +22,16 @@ class Teams {
     data class Id(val parent: Teams = Teams(), val id: String) {
 
         @Serializable
-        @Resource(TeamPaths.USERNAME_EXISTS_PATH)
-        data class CheckUsername(val parent: Id, val username: String)
+        @Resource(TeamPaths.USERNAME_UNIQUE_PATH)
+        data class UniqueUsername(val parent: Id, val username: String)
 
         @Serializable
-        @Resource(TeamPaths.PASSWORD_EXISTS_PATH)
-        data class CheckPassword(val parent: Id, val password: String)
+        @Resource(TeamPaths.PASSWORD_UNIQUE_PATH)
+        data class UniquePassword(val parent: Id, val password: String)
 
         @Serializable
-        @Resource(TeamPaths.JMS_QUEUE_EXISTS_PATH)
-        data class CheckJmsQueue(val parent: Id, val jmsQueue: String)
+        @Resource(TeamPaths.JMS_QUEUE_UNIQUE_PATH)
+        data class UniqueJmsQueue(val parent: Id, val jmsQueue: String)
 
         @Serializable
         @Resource(TeamPaths.RESET_ALL_STATISTICS_PATH)
